# Dev-Report

./: pyproject.toml
dev_report/: excelFileStorage.py  flask_wrapper.py  max_tasks.xlsx  test.py  tools.py  url_scanner.py  url_to_github_cache.json
dev_report/github_urls_present/: flask_app.py  max_tasks.xlsx  url_scanner.py
dev_report/missing_ecosystems/: fill_project_list.py  new.txt  original.txt
dev_report/solana_ecosystems/: fill_solana_ecosystems.py  tasks_solana.xlsx
dev_report/templates/: index.html
tests/: test_dev_report.py
