[tool.poetry]
name = "dev-report"
version = "0.1.0"
description = ""
authors = ["0xphoton <42502920+maxtalwar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
openpyxl = "^3.0.10"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
